--- a/src/app/issuer/components/badgeclass-edit/badgeclass-edit.component.html
+++ b/src/app/issuer/components/badgeclass-edit/badgeclass-edit.component.html
@@ -20,6 +20,7 @@
 			(save)="badgeClassSaved($event)"
 			(cancel)="editingCanceled()"
 			[badgeClass]="badgeClass"
+			[issuer]="issuer"
 			[scrolled]="scrolled"
 			isForked="false"
 		></badgeclass-edit-form>
