fix: wording, section styles (#1601)
* fix: wording, section styles

* fix: more wordings

* refactor: use 'learning path' where necessary instead of 'micro degree'

* refactor: replace more 'micro degree' with 'learning path'

* refactor: add missing translation in german

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>
Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -949,9 +949,11 @@
 								<h2 hlmH2 class="tw-font-bold">4. {{ 'CreateBadge.addTags' | translate }}</h2>
 							}
 						</div>
-						<p class="tw-italic tw-text-purple tw-mt-2">
-							{{ 'CreateBadge.tagInfo' | translate }}
-						</p>
+						<p
+							class="tw-italic tw-text-purple tw-mt-2"
+							[translate]="'CreateBadge.tagInfo'"
+							[translateParams]="{ items: 'Badges' }"
+						></p>
 						<div class="formsection-x-body tw-mt-4">
 							<div class="tw-flex tw-gap-4 tw-items-center tw-mb-2">
 								<span class="tw-font-semibold tw-text-lg tw-text-oebblack tw-uppercase"> Tag</span>
