--- a/src/app/issuer/components/add-institution/add-institution.component.html
+++ b/src/app/issuer/components/add-institution/add-institution.component.html
@@ -61,10 +61,10 @@
 				}
 			</ul>
 		}
-		<section class="tw-mb-4">
+		<section class="tw-my-8">
 			@if (selectedIssuers.length) {
 				<p
-					class="tw-italic tw-text-purple tw-text-lg tw-leading-[130%] tw-mb-2"
+					class="tw-italic tw-text-purple tw-text-lg tw-leading-[130%] tw-mb-6"
 					(click)="collapseRoles()"
 					[innerHTML]="'Network.rolesAndRights' | translate"
 				></p>
