--- a/src/app/public/components/issuer/issuer.component.html
+++ b/src/app/public/components/issuer/issuer.component.html
@@ -4,6 +4,7 @@
 			<!-- Embedded View -->
 			<oeb-issuer-detail
 				[networks]="networks"
+				[partner_issuers]="partner_issuers"
 				[badges]="badgeClasses"
 				[learningPaths]="learningPaths"
 				[public]="true"
