--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -145,7 +145,7 @@
 								@for (issuer of config.awardingIssuers; track issuer.slug) {
 									<a
 										[href]="issuer.url"
-										class="tw-flex tw-items-center oeb-slight-shadow tw-pl-4 tw-pr-2 tw-py-4 tw-bg-white tw-rounded-lg"
+										class="tw-flex tw-items-center oeb-slight-shadow tw-pl-4 tw-pr-2 tw-py-4 tw-bg-white tw-rounded-lg tw-mb-4"
 									>
 										<div>
 											<img
