--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -61,7 +61,7 @@
 		[issuers]="partnerIssuers()"
 		(removePartnerRequest)="onRemovePartner($event)"
 		[addInstitutionsTemplate]="addInstitutionsTemplate"
-		[refetchTrigger]="refetchCounter"
+		[networkInvites]="networkInvites()"
 	></network-partners>
 </ng-template>
 
