Feat/network badges (#1640)
* feat: wip

* feat: initial value for select

* feat: start adjusting issuer form to account for networks as well

* fix: remove old network model, manager etc

* feat: wip

* feat: translations

* feat: adjust network manager

* feat: new apis and model adjustments

* feat: networkcard styles

* feat: copy permissions, templates, styles

* feat: unify issuer form

* feat: partner instances api

* feat: partner instances api badge detail

* feat: add initial value to select

* feat: adjust issuer form and fix margins

* fix: merge error

* fix: more merge errors

* feat: list network badge instances

* feat: catalog, apis styles

* fix: styles, api models

* feat: wip detail components

* fix: dialog styles

* feat: translations

* fix: success dialog style

* fix: templates

* feat: add initial value to select

* feat: adjust issuer form and fix margins

* fix: tabs, translation

* fix: issuer form after merge

* feat: improve public network page

* fix: refetch partners for dynamic update

* feat: move template to own file, select network issuer

* feat: improve tabs

* fix: types

* feat(wip): partner badges

* fix: templates and minor things

* fix: filter out network badges from results

* fix: styles, filter

* feat: show awarding issuers

* feat: add initial value to select

* feat: adjust issuer form and fix margins

* fix: types, cleanup

* fix: more merge problems

* fix: crumbs, title

* fix: improve margin in dialog

* fix: width

* feat: public partner section

* fix: show 0 count in tabs

* fix: filter out networks

* fix: margin

* fix: margins

* fix: load instances for network badges

* fix: standard colors, subscription

* refactor: manage invites on dashboard component

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>
Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -1017,25 +1017,27 @@
 						{{ 'CreateBadge.optionalBadgeDetails' | translate }}
 					</h2>
 
-					<div class="section tw-text-oebblack tw-mt-6">
-						<h2 hlmH2 class="!tw-text-oebblack">
-							{{ 'Badge.copyBadgeHeadline' | translate }}
-						</h2>
-						<span
-							class="tw-text-oebblack tw-italic tw-text-lg"
-							[innerHTML]="'Badge.copyBadgeDescription1' | translate"
-						></span>
-						<span
-							class="tw-text-purple tw-italic tw-text-lg tw-mt-2"
-							[innerHTML]="'Badge.copyBadgeDescription2' | translate"
-						></span>
-						<div class="tw-mt-2 tw-mb-2">
-							<oeb-checkbox
-								[control]="badgeClassForm.rawControlMap.copy_permissions_allow_others"
-								[text]="'Badge.copyLabelOthers' | translate"
-							/>
+					@if (!issuer.is_network) {
+						<div class="section tw-text-oebblack tw-mt-6">
+							<h2 hlmH2 class="!tw-text-oebblack">
+								{{ 'Badge.copyBadgeHeadline' | translate }}
+							</h2>
+							<span
+								class="tw-text-oebblack tw-italic tw-text-lg"
+								[innerHTML]="'Badge.copyBadgeDescription1' | translate"
+							></span>
+							<span
+								class="tw-text-purple tw-italic tw-text-lg tw-mt-2"
+								[innerHTML]="'Badge.copyBadgeDescription2' | translate"
+							></span>
+							<div class="tw-mt-2 tw-mb-2">
+								<oeb-checkbox
+									[control]="badgeClassForm.rawControlMap.copy_permissions_allow_others"
+									[text]="'Badge.copyLabelOthers' | translate"
+								/>
+							</div>
 						</div>
-					</div>
+					}
 					@if (category == 'competency') {
 						<div class="section tw-text-oebblack tw-mt-6">
 							<h2 hlmH2 class="tw-pt-1 tw-px-1 tw-mr-auto !tw-text-oebblack">
