--- a/src/app/issuer/components/badgeclass-issue-qr/badgeclass-issue-qr.component.html
+++ b/src/app/issuer/components/badgeclass-issue-qr/badgeclass-issue-qr.component.html
@@ -19,7 +19,7 @@
 			</ol>
 		</div>
 		<div class="oeb-section-sm">
-			<div class="tw-bg-lightpurple tw-rounded-3xl tw-mt-2 tw-p-10">
+			<div class="tw-bg-lavender tw-rounded-3xl tw-mt-2 tw-p-10">
 				<edit-qr-form></edit-qr-form>
 			</div>
 		</div>
