--- a/src/app/issuer/components/issuer-list/issuer-list.component.html
+++ b/src/app/issuer/components/issuer-list/issuer-list.component.html
@@ -4,7 +4,7 @@
 	<div class="page-padding">
 		<div class="tw-pt-[4rem] md:tw-flex tw-justify-between md:tw-gap-16">
 			<div class="oeb-standard-padding-bottom">
-				<h1 hlmH1 class="tw-text-purple oeb-standard-padding-bottom tw-font-bold">
+				<h1 hlmH1 class="tw-text-purple oeb-standard-padding-bottom tw-font-black">
 					{{ 'NavItems.myInstitutions' | translate }}
 				</h1>
 				<oeb-tabs
