fix: resolve linting issues and log quietly (only errors) in ci

--- a/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
+++ b/src/app/issuer/components/learningpath-edit-form/learningpath-edit-form.component.html
@@ -256,7 +256,7 @@
 									</div>
 								}
 							}
-							@if (selectedBadges.length == 1) {
+							@if (selectedBadges.length === 1) {
 								<p class="tw-mt-6">
 									{{ 'LearningPath.selectedBadgesOne' | translate }}
 								</p>
