--- a/src/app/issuer/components/network-dashboard/network-dashboard.component.html
+++ b/src/app/issuer/components/network-dashboard/network-dashboard.component.html
@@ -16,12 +16,12 @@
 							'Network.yourRole'
 								| translate
 									: {
-											role: 'Network.role.' + role | translate
+											role: 'Network.role.' + role | translate,
 									  }
 						}}</span
 					>
 				</div>
-				@if (activeTab == 'badges') {
+				@if (activeTab === 'badges') {
 					<div class="tw-ml-auto">
 						<oeb-button
 							variant="secondary"
