--- a/src/app/issuer/components/badgeclass-detail/badgeclass-detail.component.html
+++ b/src/app/issuer/components/badgeclass-detail/badgeclass-detail.component.html
@@ -189,5 +189,5 @@
 	</div>
 </ng-template>
 <ng-template #networkSelection>
-	<select-network [badge]="badgeClass" [issuer]="issuer" (close)="closeDialog()"></select-network>
+	<select-network [badge]="badgeClass" [issuer]="issuer" (closeSelect)="closeDialog()"></select-network>
 </ng-template>
