--- a/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
+++ b/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
@@ -84,16 +84,16 @@
 			[options]="[
 				{
 					label: 'Issuer.schoolLabel' | translate,
-					value: 'schule'
+					value: 'schule',
 				},
 				{
 					label: 'Issuer.universityLabel' | translate,
-					value: 'hochschule'
+					value: 'hochschule',
 				},
 				{
 					label: 'Issuer.othersLabel' | translate,
-					value: 'andere'
-				}
+					value: 'andere',
+				},
 			]"
 			#issuer_category
 		></oeb-select>
@@ -150,7 +150,7 @@
 			label="{{ 'General.state' | translate }}"
 			placeholder="{{ 'General.select' | translate }}"
 			[options]="_germanStateOptions"
-			[disabled]="issuerForm.rawControlMap.country.value != 'Germany'"
+			[disabled]="issuerForm.rawControlMap.country.value !== 'Germany'"
 			#networkState
 		>
 		</oeb-select>
