--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -49,7 +49,7 @@
 										[noTopMargin]="true"
 										[errorMessage]="{
 											required: giveBadgeTitle,
-											mustChange: changeBadgeTitle
+											mustChange: changeBadgeTitle,
 										}"
 									>
 									</oeb-input>
@@ -597,7 +597,7 @@
 																'bottom.px': calculateDropdownBottom(
 																	keywordCompetenciesInput,
 																	100
-																)
+																),
 															}"
 														>
 															<ul>
@@ -834,7 +834,7 @@
 															"
 															[optionMap]="competencyCategoryOptions"
 															[errorMessage]="{
-																required: competencyCategoryError
+																required: competencyCategoryError,
 															}"
 															[noTopMargin]="true"
 															[disabled]="
@@ -868,7 +868,7 @@
 																		class="tw-max-w-40"
 																		[control]="competency.rawControlMap.hours"
 																		[errorMessage]="{
-																			max: maxValue1000
+																			max: maxValue1000,
 																		}"
 																		[noTopMargin]="true"
 																	>
@@ -880,7 +880,7 @@
 																		class="tw-max-w-40"
 																		[control]="competency.rawControlMap.minutes"
 																		[errorMessage]="{
-																			max: minMaxError
+																			max: minMaxError,
 																		}"
 																		[noTopMargin]="true"
 																	>
@@ -1132,7 +1132,7 @@
 									[maxchar]="4"
 									[min]="1"
 									[errorMessage]="{
-										max: maxValue1000
+										max: maxValue1000,
 									}"
 								></oeb-input>
 								<oeb-select
