fix: syntax issue

--- a/src/app/issuer/components/select-network/select-network.component.html
+++ b/src/app/issuer/components/select-network/select-network.component.html
@@ -46,7 +46,7 @@
 		}
 		<div class="tw-flex tw-justify-start tw-items-center tw-gap-4">
 			<oeb-button
-				(click)="close.emit()"
+				(click)="closeSelect.emit()"
 				size="sm"
 				variant="secondary"
 				(click)="shareBadge()"
