fix: translations, rm grouping, load issuer badges

--- a/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
+++ b/src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.html
@@ -952,7 +952,7 @@
 						<p
 							class="tw-italic tw-text-purple tw-mt-2"
 							[translate]="'CreateBadge.tagInfo'"
-							[translateParams]="{ items: 'Badges' }"
+							[translateParams]="{ items: 'Badges', items2: 'Badges' }"
 						></p>
 						<div class="formsection-x-body tw-mt-4">
 							<div class="tw-flex tw-gap-4 tw-items-center tw-mb-2">
