fix: add max height for dropdown

--- a/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
+++ b/src/app/issuer/components/issuer-edit-form/issuer-edit-form.component.html
@@ -140,6 +140,7 @@
 			[control]="issuerForm.rawControlMap.country"
 			label="{{ 'General.country' | translate }}"
 			placeholder="{{ 'General.select' | translate }}"
+			[dropdownMaxHeight]="500"
 			[options]="_countriesOptions"
 			#networkCountry
 		>
