fix: dont allow networks to create lps

--- a/src/app/issuer/components/badgeclass-select-type/badgeclass-select-type.component.html
+++ b/src/app/issuer/components/badgeclass-select-type/badgeclass-select-type.component.html
@@ -38,16 +38,18 @@
 						<strong>{{ 'Badge.categories.competency' | translate }}</strong>
 						<p [innerHTML]="'Badge.competencyBadgeInfo' | translate"></p>
 					</a>
-					<a
-						[routerLink]="['/issuer/issuers', issuerSlug, 'learningpaths', 'create']"
-						[state]="{ issuer: issuer }"
-						[attr.data-umami-event]="'create-micro-degree-1'"
-					>
-						<img src="../../../../breakdown/static/badgestudio/shapes/learningpath.svg" />
+					@if (!issuer.is_network) {
+						<a
+							[routerLink]="['/issuer/issuers', issuerSlug, 'learningpaths', 'create']"
+							[state]="{ issuer: issuer }"
+							[attr.data-umami-event]="'create-micro-degree-1'"
+						>
+							<img src="../../../../breakdown/static/badgestudio/shapes/learningpath.svg" />
 
-						<strong>{{ 'Badge.categories.learningpath' | translate }}</strong>
-						<p [innerHTML]="'Badge.learningPathBadgeInfo' | translate"></p>
-					</a>
+							<strong>{{ 'Badge.categories.learningpath' | translate }}</strong>
+							<p [innerHTML]="'Badge.learningPathBadgeInfo' | translate"></p>
+						</a>
+					}
 				</div>
 			</div>
 		</div>
