fix: dynamic translation

--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -267,7 +267,7 @@
 											{{ 'General.category' | translate }}
 										</dt>
 										<dd class="tw-text-sm tw-text-oebblack tw-font-medium md:tw-ml-2">
-											{{ config.category }}
+											{{ 'Badge.categories.' + config.category | translate }}
 										</dd>
 									</div>
 								}
