--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -32,6 +32,7 @@
 											width="full_width"
 											(click)="config.headerButton.action()"
 											[disabled-when-requesting]="true"
+											[disabled]="config.headerButton.disabled"
 											[text]="config.headerButton.title | translate"
 										></oeb-button>
 									}
