--- a/src/app/issuer/components/network-badges/network-badges.component.html
+++ b/src/app/issuer/components/network-badges/network-badges.component.html
@@ -87,7 +87,7 @@
 			</span>
 		</div>
 	} @else {
-		<div class="tw-mt-12" *bgAwaitPromises="sharedBadgesLoaded">
+		<div class="tw-mt-12">
 			<network-shared-badges-datatable
 				[badges]="sharedBadges"
 				(redirectToBadgeDetail)="routeToBadgeDetail($event.badge, $event.issuerSlug, $event.focusRequests)"
