feat: add network image to config

--- a/src/app/common/components/badge-detail/badge-detail.component.html
+++ b/src/app/common/components/badge-detail/badge-detail.component.html
@@ -98,7 +98,7 @@
 											class="tw-min-w-[37.1px] tw-h-[37.1px] md:tw-min-w-[53px] md:tw-h-[53px] issuer-image tw-aspect-square"
 											[loaded-src]="
 												config.networkBadge
-													? config.issuerImage
+													? config.networkImage
 													: config.sharedOnNetwork
 														? config.sharedOnNetwork.image
 														: config.issuerImage
