fix: images in partner table

--- a/src/app/issuer/components/network-partners/network-partners.component.html
+++ b/src/app/issuer/components/network-partners/network-partners.component.html
@@ -12,6 +12,7 @@
 			[partners]="issuers()"
 			[approvedInvites]="approvedInvites()"
 			(removePartnerRequest)="onPartnerRemoved($any($event))"
+			(redirectToIssuerDetail)="redirectToIssuerDetail($event)"
 		></network-partners-datatable>
 	}
 	@if (pendingInvites().length) {
